# image-gallery

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
image_gallery/: main.py  routes.py
image_gallery/utils/: auth_manager.py  s3_client.py
static/: style.css
templates/: admin.html  index.html
